...
            android:layout_weight="1"
            android:text="Unit:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextShoppingListIngredientUnit"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingredient Unit"
            android:inputType="number" />
    </LinearLayout>
...
            android:layout_weight="1"
            android:text="Amount:"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editTextShoppingListIngredientAmount"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="Ingredient Amount" />
    </LinearLayout>
...
